splash screen completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Canada Driving Quiz</string>
+    <string name="splash_screen_logo">splash_screen_logo</string>
 </resources>
