added Recycler view for states and questions.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="province">Province</string>
     <string name="total_question">Total Question</string>
     <string name="slash">/</string>
+    <string name="submit">Submit</string>
 </resources>
